--- a/9-fetch-all-reource-group-info.yml
+++ b/9-fetch-all-reource-group-info.yml
@@ -6,7 +6,8 @@
       register: rg
     - name: Print
       debug:
-       #var: rg.changed
+       var: rg
        #msg: "{{rg.resourcegroups | map(attribute='name')}}"
-       msg: "{{rg.resourcegroups}}"
+       #msg: "{{rg.resourcegroups}}"
+       
        
