--- a/winping.yml
+++ b/winping.yml
@@ -4,6 +4,7 @@
     #- name: ansible_password
      # prompt: "Enter local administrator password"
   vars:
+    ansible_port: 5985
     ansible_user: azureuser
     ansible_connection: winrm
     ansible_winrm_transport: ntlm
