--- a/9-fetch-all-reource-group-info.yml
+++ b/9-fetch-all-reource-group-info.yml
@@ -7,7 +7,8 @@
     - name: Print
       debug:
        #var: rg.resourcegroups
-       msg: "{{ rg.resourcegroups | selectattr('name')}}"
+       msg: "{{ rg}}"
+       #msg: "{{ rg.resourcegroups | selectattr('name')}}"
        #msg: "{{rg.resourcegroups | map(attribute='name')}}"
        #msg: "{{rg.resourcegroups}}"
        
