--- a/9-fetch-all-reource-group-info.yml
+++ b/9-fetch-all-reource-group-info.yml
@@ -9,7 +9,7 @@
        #var: rg.resourcegroups
        #msg: "{{ rg.resourcegroups['name'] }}"
        #msg: "{{ result.resourcegroups | selectattr('name') }}"
-       msg: "{{ rg.resourcegroups | selectattr("name")}}"
+       msg: "{{ rg.resourcegroups | selectattr('name')}}"
        #msg: "{{rg.resourcegroups | map(attribute='name')}}"
        #msg: "{{rg.resourcegroups}}"
        
