--- a/9-fetch-all-reource-group-info.yml
+++ b/9-fetch-all-reource-group-info.yml
@@ -7,7 +7,7 @@
     - name: Print
       debug:
        #var: rg.resourcegroups
-       msg: "{{ rg.resourcegroups.[0].name }}"
+       msg: "{{ rg.resourcegroups | first }}"
        #msg: "{{ result.resourcegroups | selectattr('name') }}"
        #msg: "{{ rg.resourcegroups | selectattr('name')}}"
        #msg: "{{rg.resourcegroups | map(attribute='name')}}"
