--- a/9-fetch-all-reource-group-info.yml
+++ b/9-fetch-all-reource-group-info.yml
@@ -6,7 +6,7 @@
       register: rg
     - name: Print
       debug: 
-        msg: "{{ rg.resourcegroups.item.name }}"
+        msg: "{{ item }}"
       loop: "{{ rg.resourcegroups }}"
       
      # debug:
