--- a/9-fetch-all-reource-group-info.yml
+++ b/9-fetch-all-reource-group-info.yml
@@ -12,7 +12,8 @@
      # debug:
        #var: rg.resourcegroups
       # msg: "{{ rg.resourcegroups.0.name }}"
-    - debug: msg="{{ rg|map('attribute','resourcegroups') | map('attribute','name')}}"
+    - debug: 
+       msg="{{ rg.resourcegroups | map(attribute='name')}}"
        #msg: "{{ result.resourcegroups | selectattr('name') }}"
        #msg: "{{ rg.resourcegroups | selectattr('name')}}"
        #msg: "{{rg.resourcegroups | map(attribute='name')}}"
