--- a/3-create-linux-vm-with-data-disk.yml
+++ b/3-create-linux-vm-with-data-disk.yml
@@ -70,9 +70,9 @@
         admin_username: "{{ vm_username }}"
         admin_password: "{{ vm_password }}"
         image:
-          offer: "CentOS"
-          publisher: "OpenLogic"
-          sku: "7.5"
+          offer: "centos-lvm"
+          publisher: "openlogic"
+          sku: "7-lvm"
           version: "latest"
         data_disks:
         - lun: 0
