--- a/identify-disk-and-add-to-lvm.yml
+++ b/identify-disk-and-add-to-lvm.yml
@@ -10,16 +10,16 @@
    
    - name: Print Physical Volume
      command: /usr/sbin/pvs
-     register: apple1.stdout_lines
+     register: apple1
    - debug:
-      var: apple1
+      var: apple1.stdout_lines
    - name: Print Volume Group
      command: /usr/sbin/vgs
-     register: apple2.stdout_lines
+     register: apple2
    - debug:
-      var: apple2
+      var: apple2.stdout_lines
    - name: Print LogicalVolume
      command: /usr/sbin/lvs
-     register: apple3.stdout_lines
+     register: apple3
    - debug:
-      var: apple3
+      var: apple3.stdout_lines
