--- a/9-fetch-all-reource-group-info.yml
+++ b/9-fetch-all-reource-group-info.yml
@@ -13,10 +13,10 @@
        #var: rg.resourcegroups
       # msg: "{{ rg.resourcegroups.0.name }}"
     - debug: 
-       #msg="{{ rg.resourcegroups | map(attribute='name')}}"
+       msg="{{ rg.resourcegroups | map(attribute='name')}}"
        #msg: "{{ result.resourcegroups | selectattr('name') }}"
        #msg: "{{ rg.resourcegroups | selectattr('name')}}"
        #msg: "{{rg.resourcegroups | map(attribute='name')}}"
-       msg: "{{rg}}"
+       #msg: "{{rg}}"
        
        
